--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -71,8 +71,16 @@ jobs:
           # If source files changed but packages didn't, rebuild from a prior cache.
           restore-keys: |
             ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
-      - name: Install dependencies
-        run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
+      - name: Install dependencies (force)
+         run:|
+           if [ "${{ steps.detect-package-manager.outputs.manager }}" = "yarn" ]; then
+              yarn install --force
+           elif [ "${{ steps.detect-package-manager.outputs.manager }}" = "npm" ]; then
+              npm install --force
+           else
+              echo "Unknown package manager"
+              exit 1
+              fi
       - name: Build with Next.js
         run: ${{ steps.detect-package-manager.outputs.runner }} next build
       - name: Upload artifact
